src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Quote_Approval_Level_2__c</fullName>
        <formula>IF(Overall_Discount_Percentage__c&gt;=0.16,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Approval Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Level_3__c</fullName>
        <formula>IF(Overall_Discount_Percentage__c&gt;=0.25,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Approval Level 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_State__c</fullName>
        <formula>CASE(  Quote_Approval_Status__c  ,
&quot;Not Submitted&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16),
&quot;Rejected&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16),
&quot;Pending Approval&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx2&quot;,&quot;Amber&quot;,16,16),
&quot;Approved&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),
&quot;Approval Not Required&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),&quot;&quot;)</formula>
        <inlineHelpText>Green=No Approval Needed or Approved
Amber=Pending Approval
Red= Not Submitted or Rejected</inlineHelpText>
        <label>Quote Approval State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Status__c</fullName>
        <description>Used in Red/Amber/Green Approval Status Calculation</description>
        <label>Quote Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This gets checked by workflow once a quote gets created.</description>
        <label>Quote Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Creator__c</fullName>
        <formula>CreatedBy.FirstName+&apos; &apos;+CreatedBy.LastName</formula>
        <label>Quote Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Requires_Approval__c</fullName>
        <formula>IF( Sum_of_All_Approvals__c &gt;0 &amp;&amp;  BMXB__Quote_Approved__c = FALSE, IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHQ&quot;,&quot;Red&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015S0000000TvHI&quot;,&quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red: Quote Must Be submitted for approval
Green: Approval Not Required</inlineHelpText>
        <label>Quote Requires Approval?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_2nd_approval_count__c</fullName>
        <label>Number of Line Items Needing Approval 2</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Requires_Approval_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requires_3rd_Approval__c</fullName>
        <label>Number of Line Items Needing Approval 3</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Requires_Approval_3__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requires_Approval_4_Count__c</fullName>
        <label>Number of Line Items Needing Approval 4</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Requires_Approval_4__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_E_mail__c</fullName>
        <inlineHelpText>The email that will appear on the proposal once it is generated</inlineHelpText>
        <label>Sales Rep E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email_fx__c</fullName>
        <formula>Sales_Rep_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name that will show up on the quote</inlineHelpText>
        <label>Sales Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone_Number__c</fullName>
        <inlineHelpText>The phone number that will appear on the proposal once it is generated.</inlineHelpText>
        <label>Sales Rep Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone_fx__c</fullName>
        <formula>Sales_Rep_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Total_Price_For_PM__c</fullName>
        <description>Rollup of Total Price for Quote Line Items where Product Family = Services.  Used to calculate Service Partner Margin Amount.</description>
        <label>Services Total Price For PM</label>
        <summarizedField>QuoteLineItem.Total_Price_Calculation__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <formula>License_Delivery_Contact__r.MailingStreet  &amp; BR() &amp;
License_Delivery_Contact__r.MailingCity &amp; &quot;,&quot; &amp; License_Delivery_Contact__r.MailingState &amp; &quot; &quot; &amp;
License_Delivery_Contact__r.MailingPostalCode &amp; BR()
&amp;License_Delivery_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <formula>License_Delivery_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email__c</fullName>
        <formula>License_Delivery_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Agreement_Date__c</fullName>
        <label>Signed EULA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_to_AppDynamics_EULA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box when the customer agrees to our Standard Software License EULA.</description>
        <inlineHelpText>Check this box when the customer agrees to our Standard Software License EULA.</inlineHelpText>
        <label>Subject to AppDynamics EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_to_Std_Terms_of_VAR_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This deal is subject to the standard terms detailed in the AppDynamics VAR agreement signed by the partner.</description>
        <inlineHelpText>This deal is subject to the standard terms detailed in the AppDynamics VAR agreement signed by the partner.</inlineHelpText>
        <label>Subject to Std Terms of VAR Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal_For_Premium_Subscript_Support__c</fullName>
        <inlineHelpText>This field is equal to the the sum of the Subtotal field for line items from the Perpetual License, SaaS Subcription, and On-Premise Subscription Product Families. 
It is used to calculate line items from the Premium Subscriptions Support Product Family</inlineHelpText>
        <label>Subtotal For Premium Subscript Support</label>
        <summarizedField>QuoteLineItem.Subtotal_custom__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>On-Premise Subscription, SaaS Subscription, Perpetual License</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subtotal_incl_Volume_Discount__c</fullName>
        <description>Subtotal of all line items&apos; list price * months * quantity MINUS Volume Discount. I.e Price before Partner Margin Discount and One Time Discount.</description>
        <label>Subtotal</label>
        <summarizedField>QuoteLineItem.Subtotal_custom__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_All_Approvals__c</fullName>
        <description>Calculates total number of approvals needed for quote</description>
        <formula>BMXB__Number_of_Line_Items_Needing_Approval__c +  Requires_2nd_approval_count__c +  Requires_3rd_Approval__c +  Requires_Approval_4_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of All Approvals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Percent__c</fullName>
        <label>Support Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Swap_Product_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>During the term of this Order Form, End User may (once per calendar quarter and upon 24 business hours&apos; written notice) exchange licenses among the following types of Software units (AppDynamics Pro Edition for Java, PHP, .NET, or NodeJS)</inlineHelpText>
        <label>Swap Product Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Before_Discounts__c</fullName>
        <description>This field shows the Sum Total of all the Quote Line Items before any discounts.</description>
        <formula>Subtotal_incl_Volume_Discount__c +  Volume_Discount_Total_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Before Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Percentage__c</fullName>
        <formula>1-( TotalPrice  / Total_Before_Discounts__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Due_AppDynamics__c</fullName>
        <formula>TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due AppDynamics</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Due__c</fullName>
        <description>Total Due without Field Discount</description>
        <formula>TotalPrice - Volume_Discount_Total_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Less_Partner_Margin__c</fullName>
        <description>This field represents the Total Price of the Quote before any discount minus the amount taken off for Partner Margin.</description>
        <formula>Total_Before_Discounts__c  -  Partner_Margin_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Less Partner Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_After_Fed_Dist_Margin__c</fullName>
        <formula>Gross_Total_Price__c - One_Time_Discount__c - Partner_Margin_Amount__c - Federal_Distributor_Margin_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price After Fed. Dist. Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_After_Partner_Margin__c</fullName>
        <formula>Gross_Total_Price__c - One_Time_Discount__c - Partner_Margin_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price After Partner Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Before_Partner_Margin__c</fullName>
        <formula>TotalPrice+Partner_Margin_Amount__c +  Federal_Distributor_Margin_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price Before Partner Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Custom__c</fullName>
        <description>Gross Total Price minus the One Time Discount amount.

Referenced by code inserting Partner Margin SKU.</description>
        <label>Total Price After One Time Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAR_Contract_Date__c</fullName>
        <formula>Partner_on_Quote__r.Date_VAR_Contract_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAR Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume_Discount_Total_Amt__c</fullName>
        <label>Volume Discount Total</label>
        <summarizedField>QuoteLineItem.Volume_Discount_Amount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>We_have_read_agreed_to_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when the customer has negotiated specific changes to the AppDynamics Standard EULA.</description>
        <inlineHelpText>Check this box when the customer has negotiated specific changes to the AppDynamics Standard EULA.   Be sure to fill in the date of the signed agreement.</inlineHelpText>
        <label>Subject to the Agreement Dated:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <label>Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Awaiting_Approval</fullName>
        <active>true</active>
        <label>Awaiting Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Quote</fullName>
        <active>true</active>
        <description>The Initial Create Quote Page Layout</description>
        <label>Create Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Payment_Schedule</fullName>
        <active>true</active>
        <label>Custom Payment Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Customer_Quote</fullName>
        <active>true</active>
        <description>Generate a quote for a customer</description>
        <label>New Customer Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_Approval</fullName>
        <active>true</active>
        <description>Approval Layout without Start Sync</description>
        <label>Pending Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agreement_date_is_required</fullName>
        <active>false</active>
        <description>If &quot;Subject to Agreement&apos; field is checked, require date to be entered</description>
        <errorConditionFormula>AND 
(We_have_read_agreed_to_terms__c = TRUE,
ISBLANK  (Signed_Agreement_Date__c )
)</errorConditionFormula>
        <errorMessage>Please enter date of signed agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMXB__End_Date_Must_Be_Greater_Than_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>BMXB__Start_Date__c &gt;  BMXB__End_Date2__c</errorConditionFormula>
        <errorDisplayField>BMXB__End_Date2__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMXB__No_Negative_Number_of_Terms</fullName>
        <active>false</active>
        <description>You cannot enter a negative number for Number of Terms (in Months)</description>
        <errorConditionFormula>BMXB__Contract_Term_Months__c  &lt; 0</errorConditionFormula>
        <errorMessage>You cannot enter a negative Number of Terms (in Months)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Eula_Required_on_Opportunity</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(Opportunity.Project_Region__c))</errorConditionFormula>
        <errorMessage>Add Project Country and Project EULA on Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Net_60_Payment_Terms</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Payment_Terms__c,&quot;Net 60&quot;), 
OR( 
ISPICKVAL(PRIORVALUE(Payment_Terms__c), &quot;Net 14&quot;), 
ISPICKVAL(PRIORVALUE(Payment_Terms__c), &quot;Net 30&quot;), 
ISPICKVAL(PRIORVALUE(Payment_Terms__c), &quot;Net 45&quot;)), 
$Profile.Name &lt;&gt; &quot;AppD Sys Admin&quot;, 
$Profile.Name &lt;&gt; &quot;AppD Order Ops&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;AppD Legal&quot;, 
$Profile.Name &lt;&gt; &quot;AppD Finance&quot;)</errorConditionFormula>
        <errorDisplayField>Payment_Terms__c</errorDisplayField>
        <errorMessage>Please Choose Net 30 or Net 45 or contact Order Ops</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Signed_EULA_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( EULA_or_Agreement_Type__c ,&quot;Signed EULA&quot;) &amp;&amp;  ISBLANK( Signed_Agreement_Date__c )</errorConditionFormula>
        <errorDisplayField>Signed_Agreement_Date__c</errorDisplayField>
        <errorMessage>Signed Agreement Date is required for signed EULA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAR_Contract_Date_is_Required</fullName>
        <active>false</active>
        <description>If &quot;Is_Partner&quot; is checked,  VAR Contract Date require date to be entered</description>
        <errorConditionFormula>AND 
( Is_Partner__c = TRUE,
ISBLANK  ( VAR_Contract_Date__c )
)</errorConditionFormula>
        <errorMessage>Please enter VAR Contract Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_required_for_One_Time_Discount</fullName>
        <active>false</active>
        <description>A value must be entered for One Time Discount. 0 may be entered.</description>
        <errorConditionFormula>ISNULL( One_Time_Discount_Percentage__c )</errorConditionFormula>
        <errorDisplayField>One_Time_Discount_Percentage__c</errorDisplayField>
        <errorMessage>A value must be entered for One Time Discount. 0 may be entered.</errorMessage>
    </validationRules>
</CustomObject>